[package]
name = "timers"
version = "0.1.0"
edition = "2021"
authors = ["sarubo"]
description = "Simple stopwatch and countdown timer."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seahorse = "2.1"

[target.'cfg(unix)'.dependencies]
termios = "0.3"
